# diapositive

./: .gitignore  README.md  pyproject.toml
diapositive/: __init__.py  __main__.py  filters.py  models.py  util.py
diapositive/static/: styles.css
diapositive/templates/: 404.html  album.html  base.html  index.html  photo.html  redirect.html
